# pyarx

./: .gitignore  .makim.yaml  .pre-commit-config.yaml  .releaserc.json  404.html  LICENSE  Makefile  README.md  index.html  mkdocs.yaml  objects.inv  pyproject.toml  sitemap.xml
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  documentation-report.yml  feature-request.yml
.github/workflows/: docs.yaml  main.yaml  release.yaml
api/ast/: index.html
api/cli/: index.html
api/codegen/ast-output/: index.html
api/codegen/file-object/: index.html
api/io/: index.html
api/lexer/: index.html
api/logs/: index.html
api/main/: index.html
api/parser/: index.html  parser.md
api/semantic/: index.html
changelog/: changelog.md  index.html
coc/: coc.md  index.html
conda/: dev.yaml  release.yaml
contributing/: contributing.md  index.html
discord/: index.html
docs/: contributing.md  example.ipynb  governance.md  index.md  installation.md  mkdocs.yaml  roadmap.md
docs/api/: ast.md  cli.md  io.md  lexer.md  logs.md  main.md  semantic.md
docs/api/codegen/: ast-output.md  file-object.md
examples/: average.arx  constant.arx  fibonacci.arx  print-star.arx  sum.arx
governance/: index.html
partners/: index.html
roadmap/: index.html  roadmap.md
scripts/: gen_ref_nav.py
search/: search_index.json
sponsor/: index.html  sponsor.md
src/arx/: __init__.py  ast.py  cli.py  codegen.py  exceptions.py  io.py  lexer.py  logs.py  main.py  parser.py
src/arx/codegen/: arx_llvm.py  ast_output.py  ast_to_llvm_ir.py  ast_to_object.py  ast_to_output.py  base.py  file_object.py
src/pyarx/: __init__.py  __main__.py
tests/: __init__.py  test_codegen_arx_llvm.py  test_codegen_ast_output.py  test_codegen_ast_to_object.py  test_codegen_ast_to_output.py  test_codegen_file_object.py  test_io.py  test_lexer.py  test_logs.py  test_parser.py  test_pyarx.py
