[tool.poetry]
name = "arxlang"
version = "0.1.1"  # semantic-release
description = "Arx is a compiler built with llvm"
authors = ["Ivan Ogasawara <ivan.ogasawara@gmail.com>"]
license = "Apache Software License 2.0"
include = [
  "src/arx",
]
exclude = [
  ".git/*",
  ".env*",
]
packages = [
  {include = "arx", from="src"},
]

[tool.poetry.scripts]
"arx" = "arx.__main__:app"

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = ">=4"
astx = "0.11.*"
pyirx = "1.2.*"

[tool.poetry.group.dev.dependencies]
pytest = ">=7"
pytest-cov = ">=4"
coverage = ">=7"
pre-commit = ">=3"
ruff = ">=0.3.0"
mypy = ">=1.6"
bandit = ">=1.7.5"
vulture = ">=2.7"
mccabe = ">=0.6.1"
mkdocs = ">=1.4.3"
mkdocs-exclude = ">=1.0.2"
mkdocs-jupyter = ">=0.24.7"
mkdocs-literate-nav = ">=0.6.0"
mkdocs-macros-plugin = ">=0.7.0,<1"
mkdocs-material = ">=9.1.15"
mkdocstrings = ">=0.21.2"
mkdocstrings-python = ">=1.1.2"
makim = "1.15.0"
pytkdocs = {extras = ["numpy-style"], version = ">=0.16.1"}
pdbpp = ">=0.10.3"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
ignore_missing_imports = true
no_strict_optional = false
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
  "llvmlite",
  "llvmlite.binding",
  "yaml",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 79
force-exclude = true
src = ["./"]
exclude = [
  'docs',
  'tests',
]
fix = true

[tool.ruff.lint]
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "D",   # pydocstyle
  "YTT", # flake8-2020
  # "PL",  # PL
  "RUF", # Ruff-specific rules
  "I001", # isort
]
ignore = [
  "F811",
  "PLR0911",  # Too many return statements
  "PLR0912",  # Too many branches
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
# Use a single line between direct and from import
lines-between-types = 1

[tool.ruff.format]
quote-style = "double"

[tool.bandit]
exclude_dirs = ["tests"]
targets = "src/arx"


[tool.vulture]
exclude = ["tests"]
ignore_decorators = []
ignore_names = []
make_whitelist = true
min_confidence = 80
paths = ["src/arx"]
sort_by_size = true
verbose = false
